cmake_minimum_required(VERSION 3.7)
project(algorithms)
set(CMAKE_CXX_STANDARD 11)

include_directories(include)
set(SOURCE_FILES src/*.cpp)
add_executable(reverselinkedlist src/ReverseLinkedList.cpp)
add_executable(SinglyLinkedListTest test/List/SinglyLinkedListTest.cpp)
add_executable(DoublyLinkedListTest test/List/DoublyLinkedListTest.cpp)
add_executable(StackTest test/StackTest.cpp)
add_executable(BSTTest test/Tree/BinarySearchTreeTest.cpp)